force-app/main/default/objects/vlocity_ins__ConsoleActionLog__c/fields/vlocity_ins__Processed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>