force-app/main/default/objects/vlocity_ins__ConsoleActionLog__c/fields/vlocity_ins__ProcessedEventString__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProcessedEventString__c</fullName>
    <label>Processed Event String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>